full-moon/tests/roblox_cases/fail/parser/generic_declare_packs_last/error_display.snap
---
source: full-moon/tests/fail_cases.rs
expression: "String::from_utf8(output.into_inner()).unwrap()"
---
error[ast]: generic types come before generic type packs
  ┌─ source.lua:1:16
  │
1 │ type Bar<T..., U> = nil
  │                ^


